Project

General

Profile

Actions

Bug #8220

closed

common/iscsi: misleading-indentation

Added by Toomas Soome about 6 years ago. Updated about 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
kernel
Start date:
2017-05-13
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Building with gcc 6:

../../../common/iscsi/utils.c: In function 'parse_addr_port_tpgt':
../../../common/iscsi/utils.c:169:3: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
   if (in == NULL)
   ^~
../../../common/iscsi/utils.c:171:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
    *in++ = '\0';
    ^
cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk about 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 7153155797a2d348ef707cf0655ea4f87b029013

commit  7153155797a2d348ef707cf0655ea4f87b029013
Author: Toomas Soome <tsoome@me.com>
Date:   2017-05-13T21:35:17.000Z

    8220 common/iscsi: misleading-indentation
    Reviewed by: Yuri Pankov <yuri.pankov@gmail.com>
    Reviewed by: Igor Kozhukhov <igor@dilos.org>
    Approved by: Gordon Ross <gordon.w.ross@gmail.com>

Actions

Also available in: Atom PDF